[tool.poetry]
name = "robot-man-v3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
discord = "^1.0"
flask = "^1.1"
prawcore = "^1.0"
tweepy = "^3.8"
googletrans = "^2.4"
praw = "^6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
