[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "robot-man-v3"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
flask = "^1.1"
googletrans = "^2.4"
gsearch = "^1.6"
praw = "^6.5"
prawcore = "^1.0"
python = "^3.8"
tweepy = "^3.8"
"discord.py" = "^1.3.4"
[tool.poetry.dev-dependencies]
